# jobspy

./: pyproject.toml
jobspy/: __main__.py  model.py  query_lang.py  querying.py  tui.py
jobspy/querying/: __init__.py  parser.py  query.py
jobspy/services/: gitlab.py
jobspy/tui/: app.py  app.tcss  job_details.py  job_master.py
tests/: __init__.py  conftest.py  test_query_lang.py
tests/querying/: test_filter_items.py  test_parse_multiple_conditions.py  test_parser.py  test_query.py
