[tool.poetry]
name = "jobspy"
version = "0.1.0"
description = ""
authors = ["Jürgen Altszeimer <Brokdar89@gmal.com>"]
readme = "README.md"

[tool.poetry.scripts]
jobspy = "jobspy.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"
python-gitlab = "^4.7.0"
textual = "^0.70.0"
click = "^8.1.7"
pydantic = "^2.7.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
coverage = "^7.5.4"
pre-commit = "^3.7.1"
textual-dev = "^1.5.1"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
